# tree-surgeon

./: .gitignore  CHANGELOG.md  LICENSE  README.md  docinfo.html  faq.html  flake.nix  index.html  language_tour.html  matchers.html  nameEndsWithCpp  result  tree-surgeon  tree-surgeon-test.nix  tree-surgeon.cabal
.github/workflows/: Documentation.yml
app/: AST.hs  ASTFuncs.hs  Cli.hs  Functions.hs  Lexer.hs  Lexer.x  Main.hs  Output.hs  Parser.hs  Parser.y  TSException.hs  TreeFilter.hs  TreeShow.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
docs/: docinfo.html  faq.adoc  index.adoc  index.html  language_tour.adoc  matchers.adoc  style.css
happy/: tree-surgeon.y
nix/: lib.nix  makePrunedSrc.nix
notes/: notes.md
src/: tree-surgeon.cabal
src/app/: ASTShow.hs  AppState.hs  Cli.hs  ExceptionFuncs.hs  Exceptions.hs  FData.hs  FunctionDefinition.hs  Functions.hs  InfixOperators.hs  IsTrace.hs  Lexer.hs  Lexer.x  Lit.hs  Main.hs  Output.hs  ParseException.hs  Parser.hs  Parser.y  RawExp.hs  RawExpFuncs.hs  Resolved.hs  ResolvedFuncs.hs  ResolvedType.hs  SimpleExp.hs  SimpleExpFuncs.hs  ToGitExclude.hs  Trace.hs  TreeFilter.hs
src/test/: Tests.hs  executable-tests.clj  executable_tests.sh
src/test/docs-test-data/myDir/docs/: docs.md
src/test/docs-test-data/myDir/mySrc/: myMain.rs
src/test/test-data-temp/test-data/c-executable/ext/: tree
src/test/test-data/b-library/: file_b_2.hpp
test/: Tests.hs  executable-tests.clj  executable_tests.sh
